workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__shape__test__can_handle_add_field_command__new_events.snap
---
source: workspaces/optic-engine-native/src/commands/shape.rs
expression: new_events
---
[
    FieldAdded(
        FieldAdded {
            field_id: "field_2",
            shape_id: "shape_1",
            name: "username",
            shape_descriptor: FieldShapeFromShape(
                FieldShapeFromShape {
                    field_id: "field_2",
                    shape_id: "shape_3",
                },
            ),
            event_context: None,
        },
    ),
]
